added reading requirements to project

--- a/project_description.ipynb
+++ b/project_description.ipynb
@@ -7,6 +7,8 @@
     "# Project 1: Pose estimation\n",
     "## Due Jan. 30th\n",
     "\n",
+    "### Assigned Reading: Szeliski Ch 2.3, Ch. 6.2\n",
+    "\n",
     "### Problem description\n",
     "One of the most common computer vision tasks, particularly for things like practical robotics, is called *pose estimation*.  *Pose* is simply the computer vision term for the vector\n",
     "$$\n",
