Added prelim camera stuff

--- a/project_description.ipynb
+++ b/project_description.ipynb
@@ -38,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Camera(object):\n",
@@ -47,24 +49,108 @@
     "        self.f = None                   # Focal Length in Pixels\n",
     "        self.c = np.array([None,None])  # \n",
     "        \n",
-    "    def projective_transform(self,x):\n",
-    "        \"\"\"  \n",
+    "        def projective_transform(self, x):\n",
+    "        \"\"\"\n",
     "        This function performs the projective transform on generalized coordinates in the camera reference frame.\n",
     "        \"\"\"\n",
-    "        pass\n",
-    "    \n",
-    "    def rotational_transform(self,X):\n",
-    "        \"\"\"  \n",
+    "\n",
+    "        x = np.asarray(x)\n",
+    "\n",
+    "        # Assume no intensity column\n",
+    "        x0, y0, z0 = x[0:, 0], x[0:, 1], x[0:, 2]\n",
+    "\n",
+    "        print(x0)\n",
+    "        sensor_size = (2000, 1000)\n",
+    "        f = 1000  # Note: Do not need to scale f if we make n_pixels_u = sensor_size_u\n",
+    "\n",
+    "        # Camera coors to pixel coors\n",
+    "        u = ((x0 / z0) * f) + (sensor_size[0] // 2)\n",
+    "        v = ((y0 / z0) * f) + (sensor_size[1] // 2)\n",
+    "\n",
+    "        u_min = np.min(u)\n",
+    "        v_min = np.min(v)\n",
+    "\n",
+    "        n = len(u)\n",
+    "        u_list = []\n",
+    "        v_list = []\n",
+    "        for i in range(n):\n",
+    "            if (u[i] >= u_min and u[i] <= sensor_size[0] and v[i] >= v_min and v[i] <= sensor_size[1]):\n",
+    "                u_list.append(u[i])\n",
+    "                v_list.append(v[i])\n",
+    "\n",
+    "        u = np.asarray(u_list)\n",
+    "        v = np.asarray(v_list)\n",
+    "\n",
+    "        return u, v\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def make_cam_mtx(fi, theta, psi, translation_vec):\n",
+    "\n",
+    "        translation_mtx = np.asmatrix([[1, 0, 0, -translation_vec[0]],\n",
+    "                                       [0, 1, 0, -translation_vec[1]],\n",
+    "                                       [0, 0, 1, -translation_vec[2]],\n",
+    "                                       [0, 0, 0, 1]])\n",
+    "\n",
+    "        # Apply yaw. It represents rotation around camera's z axis\n",
+    "        cos_fi = np.cos(fi)\n",
+    "        sin_fi = np.sin(fi)\n",
+    "        R_yaw = np.asmatrix([[cos_fi, -sin_fi, 0, 0],\n",
+    "                             [sin_fi, cos_fi, 0, 0],\n",
+    "                             [0, 0, 1, 0]])\n",
+    "\n",
+    "        # Apply pitch. Represents rotation around camera's x axis\n",
+    "        cos_theta = np.cos(theta)\n",
+    "        sin_theta = np.sin(theta)\n",
+    "        R_pitch = np.asmatrix([[1, 0, 0],\n",
+    "                               [0, cos_theta, sin_theta],\n",
+    "                               [0, -sin_theta, cos_theta]])\n",
+    "\n",
+    "        # Apply roll. Represents rotation around camera's y axis\n",
+    "        cos_psi = np.cos(psi)\n",
+    "        sin_psi = np.sin(psi)\n",
+    "        R_roll = np.asmatrix([[cos_psi, 0, -sin_psi],\n",
+    "                              [0, 1, 0],\n",
+    "                              [sin_psi, 0, cos_psi]])\n",
+    "\n",
+    "        R_ax_swp = np.asmatrix([[1, 0, 0],\n",
+    "                                [0, 0, -1],\n",
+    "                                [0, 1, 0]])\n",
+    "\n",
+    "        return np.matmul(R_ax_swp, np.matmul(R_roll, np.matmul(R_pitch, np.matmul(R_yaw, translation_mtx))))\n",
+    "\n",
+    "    def rotational_transform(self, X):\n",
+    "        \"\"\"\n",
     "        This function performs the translation and rotation from world coordinates into generalized camera coordinates.\n",
     "        \"\"\"\n",
-    "        pass\n",
-    "    \n",
-    "    def estimate_pose(self,X_gcp,u_gcp):\n",
+    "\n",
+    "        # Unpack pose? could do something different here.\n",
+    "        X_cam, Y_cam, Z_cam, azimuth_cam_deg, pitch_cam_deg, roll_cam_deg = self.p\n",
+    "\n",
+    "        # Make X a set of homogeneous coors\n",
+    "        X = np.hstack((X, np.ones(shape=(X.shape[0], 1))))\n",
+    "\n",
+    "        # Convert degrees to radians\n",
+    "        azimuth_cam_rad = np.deg2rad(azimuth_cam_deg)\n",
+    "        pitch_cam_rad = np.deg2rad(pitch_cam_deg)\n",
+    "        roll_cam_rad = np.deg2rad(roll_cam_deg)\n",
+    "\n",
+    "        translation_vec = [X_cam, Y_cam, Z_cam]\n",
+    "        C = self.make_cam_mtx(azimuth_cam_rad, pitch_cam_rad, roll_cam_rad, translation_vec)\n",
+    "\n",
+    "        return [np.matmul(C, np.asmatrix(point).T) for point in X]\n",
+    "\n",
+    "    def estimate_pose(self, X_gcp, u_gcp):\n",
     "        \"\"\"\n",
-    "        This function adjusts the pose vector such that the difference between the observed pixel coordinates u_gcp \n",
+    "        This function adjusts the pose vector such that the difference between the observed pixel coordinates u_gcp\n",
     "        and the projected pixels coordinates of X_gcp is minimized.\n",
     "        \"\"\"\n",
-    "        pass\n"
+    "        \n",
+    "        pass\n",
+    "\n",
+    "    # f\n",
+    "    def ene_to_camera(self, X):\n",
+    "\n",
+    "        return self.projective_transform(self.rotational_transform(X))\n"
    ]
   },
   {
@@ -217,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
