--- a/project_description.ipynb
+++ b/project_description.ipynb
@@ -43,13 +43,17 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "from scipy.optimize import least_squares\n",
+    "\n",
+    "\n",
     "class Camera(object):\n",
     "    def __init__(self):\n",
     "        self.p = None                   # Pose\n",
     "        self.f = None                   # Focal Length in Pixels\n",
     "        self.c = np.array([None,None])  # \n",
     "        \n",
-    "        def projective_transform(self, x):\n",
+    "    def projective_transform(self, x):\n",
     "        \"\"\"\n",
     "        This function performs the projective transform on generalized coordinates in the camera reference frame.\n",
     "        \"\"\"\n",
@@ -138,18 +142,24 @@
     "        C = self.make_cam_mtx(azimuth_cam_rad, pitch_cam_rad, roll_cam_rad, translation_vec)\n",
     "\n",
     "        return [np.matmul(C, np.asmatrix(point).T) for point in X]\n",
-    "\n",
+    "    \n",
     "    def estimate_pose(self, X_gcp, u_gcp):\n",
     "        \"\"\"\n",
     "        This function adjusts the pose vector such that the difference between the observed pixel coordinates u_gcp\n",
     "        and the projected pixels coordinates of X_gcp is minimized.\n",
     "        \"\"\"\n",
+    "        self.p = np.zeros(6) + 1\n",
     "        \n",
-    "        pass\n",
+    "        def residuals(p, X_gcp, u_gcp):\n",
+    "            self.p = p\n",
+    "            xuv = self.ene_to_camera(X_gcp)\n",
+    "            return xuv.flatten() - u_gcp.flatten()\n",
+    "            \n",
+    "        res = least_squares(residuals, self.p, args=(X_gcp, u_gcp))\n",
+    "        self.p = res.x\n",
     "\n",
     "    # f\n",
     "    def ene_to_camera(self, X):\n",
-    "\n",
     "        return self.projective_transform(self.rotational_transform(X))\n"
    ]
   },
@@ -303,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
