Fix type and remove commented code

--- a/project_description.ipynb
+++ b/project_description.ipynb
@@ -59,12 +59,8 @@
     "        \"\"\"\n",
     "\n",
     "        x = np.asarray(x)\n",
-    "\n",
     "        # Assume no intensity column\n",
     "        x0, y0, z0 = x\n",
-    "\n",
-    "#         print(x0)\n",
-    "        #f = 1000  # Note: Do not need to scale f if we make n_pixels_u = sensor_size_u\n",
     "\n",
     "        # Camera coors to pixel coors\n",
     "        u = ((x0 / z0) * self.f) + (self.sensor_size[0] // 2)\n",
@@ -148,7 +144,7 @@
     "        and the projected pixels coordinates of X_gcp is minimized.\n",
     "        \"\"\"\n",
     "        \n",
-    "        self.p = self.p0.copy()z\n",
+    "        self.p = self.p0.copy()\n",
     "        \n",
     "        def residuals(p, X_gcp, u_gcp):\n",
     "            self.p = p.copy()\n",
