Switch to ravel

--- a/project_description.ipynb
+++ b/project_description.ipynb
@@ -149,7 +149,7 @@
     "        def residuals(p, X_gcp, u_gcp):\n",
     "            self.p = p.copy()\n",
     "            xuv = self.ene_to_camera(X_gcp)\n",
-    "            return xuv.flatten() - u_gcp.flatten()\n",
+    "            return xuv.ravel() - u_gcp.ravel()\n",
     "            \n",
     "        res = least_squares(residuals, self.p, args=(X_gcp, u_gcp))\n",
     "        self.p = res.x\n",
